# aqueduct-poc-alpha

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
aqueduct_cloud_functions/: settings.py
aqueduct_cloud_functions/adapters/: cabq_adapter.py  hydrovu_adapter.py
aqueduct_cloud_functions/canonical/: __init__.py  base_adapter.py  canonical_constants.py  canonical_model.py
aqueduct_cloud_functions/clients/: __init__.py  gcs_client.py  hydrovu_client.py
tests/: conftest.py  test_canonical.py  test_gcs_client.py  test_hydrovu_client.py  test_pvacd_ingest.py
