[project]
name = "aqueduct-poc-alpha"
version = "0.1.0"
description = "POC with GCP Cloud Functions + Workflows + Monitoring"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "functions-framework>=3.10.1",
    "geojson>=3.3.0",
    "google-cloud-secret-manager>=2.29.0",
    "google-cloud-storage>=3.11.0",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyproj>=3.7.2",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.36.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
