[project]
name = "aqueduct-poc-alpha"
version = "0.1.0"
description = "POC with GCP Cloud Functions + Workflows + Monitoring"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "functions-framework>=3.10.1",
    "geojson>=3.3.0",
    "google-cloud-secret-manager>=2.29.0",
    "google-cloud-storage>=3.11.0",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyproj>=3.7.2",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# `ruff format` already wraps code at line-length; it can't split long
# strings, comments, or docstrings, so E501 only nags about those. Disable
# it per Ruff's recommendation when using the formatter.
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["google.*", "geojson.*", "functions_framework.*"]
ignore_missing_imports = true
